@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package util {

    '' ========================================================
    '' componentized.h
    '' ========================================================
    struct component_field {
    }

    struct ref_component_field {
    }

    class "fixed_string<std::size_t N>" as fixed_string {
        + data : char[N]
        + consteval fixed_string(s : char const (&)[N])
        + consteval view() : std::string_view const
    }

    class "component_tag<fixed_string field>" as component_tag {
    }

    class "componentized<typename T>" as componentized {
        - {static} consteval get_tagged_member() : std::meta::info
        + operator()(component_tag<field>) : auto&
        + operator()(component_tag<field>) : auto const& const
    }

    '' ========================================================
    '' resource.h
    '' ========================================================
    abstract class resource {
        + {abstract} ~resource()
        + {abstract} operator()(component_tag<"beginning">) : void const* const
        + {abstract} operator()(component_tag<"end">) : void const* const
        + {abstract} operator()(component_tag<"size">) : std::size_t const
    }

    '' ========================================================
    '' file-resource.h
    '' ========================================================
    class file_resource {
        - file_data : std::vector<std::byte>
        + explicit file_resource(data : std::vector<std::byte>)
        + ~file_resource() override
        + operator()(component_tag<"beginning">) : void const* const override
        + operator()(component_tag<"end">) : void const* const override
        + operator()(component_tag<"size">) : std::size_t const override
    }

    '' ========================================================
    '' binary-resource.h
    '' ========================================================
    class binary_resource {
        - begin_ptr : void const*
        - end_ptr : void const*
        - byte_size : std::size_t
        + binary_resource(begin : void const*, end : void const*)
        + ~binary_resource() override
        + operator()(component_tag<"beginning">) : void const* const override
        + operator()(component_tag<"end">) : void const* const override
        + operator()(component_tag<"size">) : std::size_t const override
    }

    '' ========================================================
    '' resource-loader.h
    '' ========================================================
    class resource_loader {
        - symbol_cache : std::unordered_map<std::string, void*>
        - resource_cache : std::unordered_map<std::string, std::unique_ptr<resource>>
        - cache_mutex : mutable std::shared_mutex
        - lookup_binary(resource_name : std::string_view) : void*
        - load_file(resource_name : std::string_view) : std::unique_ptr<resource> const
        - lookup_resource_runtime(resource_name : std::string_view) : resource*
        - constexpr make_symbol_name(resource_name : std::string_view) : std::string const
        - {static} consteval count_res_members() : std::size_t
        - {static} consteval get_res_members_array() : info_array<N>
        - constexpr get_by_symbol_reflection(symbol_name : std::string_view) : resource const* const
        + resource_loader()
        + ~resource_loader()
        + resource_loader(const&) = delete
        + operator=(const&) = delete
        + constexpr lookup_resource(resource_name : std::string_view) : resource*
    }

    class "resource_loader::info_array<std::size_t N>" as info_array << (S,#FF7700) struct >> {
        + data : std::meta::info[N > 0 ? N : 1]
    }

    '' ========================================================
    '' indexed-storage.h
    '' ========================================================
    class "indexed_storage<typename T>" as indexed_storage {
        + {static} constexpr nullid : id_t = 0
        # objects : std::vector<T>
        # lookup : std::vector<id_t>
        # reverse : std::vector<size_t>
        # next_id : id_t = 1
        - init_from_objects() : void
        + indexed_storage()
        + explicit indexed_storage(initial_objects : std::vector<T> const&)
        + explicit indexed_storage(initial_objects : std::vector<T>&&)
        + size() : id_t const
        + add(object : T const&) : id_t
        + add(object : T&&) : id_t
        + remove(id : id_t) : void
        + operator[](id : id_t) : T&
        + operator[](id : id_t) : T const& const
        + begin() : iterator
        + end() : iterator
        + begin() : const_iterator const
        + end() : const_iterator const
        + cbegin() : const_iterator const
        + cend() : const_iterator const
        + erase(it : iterator) : iterator
        + erase(it : const_iterator) : const_iterator
        + contains(id : id_t) : bool const
    }

    class "indexed_storage::entry" as storage_entry << (S,#FF7700) struct >> {
        + id : id_t
        + value : T&
    }

    class "indexed_storage::const_entry" as storage_const_entry << (S,#FF7700) struct >> {
        + id : id_t
        + value : T const&
    }

    class "indexed_storage::iterator" as storage_iterator {
        - storage : indexed_storage*
        - index : size_t
        - iterator(st : indexed_storage*, idx : size_t)
        + iterator()
        + operator*() : entry const
        + operator++() : iterator&
        + operator++(int) : iterator
        + operator--() : iterator&
        + operator--(int) : iterator
        + operator==(other : iterator const&) : bool const
        + operator!=(other : iterator const&) : bool const
    }

    class "indexed_storage::const_iterator" as storage_const_iterator {
        - storage : indexed_storage const*
        - index : size_t
        - const_iterator(st : indexed_storage const*, idx : size_t)
        + const_iterator()
        + operator*() : const_entry const
        + operator++() : const_iterator&
        + operator++(int) : const_iterator
        + operator--() : const_iterator&
        + operator--(int) : const_iterator
        + operator==(other : const_iterator const&) : bool const
        + operator!=(other : const_iterator const&) : bool const
    }
}

'' Inheritance
resource <|-- file_resource
resource <|-- binary_resource

'' Dependencies
componentized ..> fixed_string
componentized ..> component_tag
resource ..> component_tag
file_resource ..> component_tag
binary_resource ..> component_tag
resource_loader ..> resource
storage_iterator ..> indexed_storage
storage_const_iterator ..> indexed_storage

@enduml